@@ -145,6 +145,7 @@ S3method(makeRLearner,classif.saeDNN)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,classif.xgboost)
 S3method(makeRLearner,classif.xyf)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
@@ -199,6 +200,7 @@ S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
 S3method(makeRLearner,regr.slim)
 S3method(makeRLearner,regr.svm)
+S3method(makeRLearner,regr.xgboost)
 S3method(makeRLearner,regr.xyf)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.cforest)
@@ -296,6 +298,7 @@ S3method(predictLearner,classif.saeDNN)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,classif.xyf)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
@@ -349,6 +352,7 @@ S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,regr.slim)
 S3method(predictLearner,regr.svm)
+S3method(predictLearner,regr.xgboost)
 S3method(predictLearner,regr.xyf)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
@@ -495,6 +499,7 @@ S3method(trainLearner,classif.saeDNN)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,classif.xgboost)
 S3method(trainLearner,classif.xyf)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
@@ -548,6 +553,7 @@ S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,regr.slim)
 S3method(trainLearner,regr.svm)
+S3method(trainLearner,regr.xgboost)
 S3method(trainLearner,regr.xyf)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.cforest)
